# CHAIR

./: .env.example  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md  TUTORIAL.md  analyzer.ts  config.json  constants.py  constants.ts  eslint.config.js  index.ts  job.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.bertopic.txt  requirements.hdbscan.txt  requirements.txt  run.ps1  setup.bat  setup.sh  tsconfig.json  tsdoc.json  typedoc.json
.claude/: settings.local.json
analysis/: analyzer.ts  playground-c.ts  playground-c1.ts  playground-ec.ts  playground-h1.ts  playground-h2.ts  playground-l1.ts  playground-l2.ts  playground-l3.ts  playground.ts
coding/: conversations.ts  high-level-1.ts  high-level-2.ts  high-level.ts  low-level-1.ts  low-level-2.ts  low-level-3.ts  low-level-4.ts  low-level.ts  playground-h1.ts  playground-h2.ts  playground-l1.ts  playground-l2.ts  playground-l3.ts  playground-l4.ts
consolidating/: alternative-merger.ts  category-assigner.ts  category-merger.ts  category-name-merger.ts  category-refiner.ts  codebooks.ts  consolidator.ts  definition-generator.ts  playground-high-level.ts  playground-human.ts  playground-low-level.ts  refine-merger.ts  simple-merger.ts
docs/: TUTORIAL-DATA.md  TUTORIAL-DEDUCTIVE.md  TUTORIAL-INDUCTIVE.md  TUTORIAL-SPREADSHEET.md  TUTORIAL.md  hierarchy.html  index.html  modules.html
evaluating/: codebooks.ts  coverage-evaluator.ts  network-evaluator.ts  playground-coverage-evaluator.ts  playground-reference-builder.ts  reference-builder.ts
examples/: code-evaluate.ts  code-format.json  data-format.json  example-automatic.ts  example-deductive.ts  example-interactive.ts  job-config.ts  tsconfig.json
exporting/: message-groups.ts  physics-lab.ts
known/: emoji.csv  glossary.csv  temp.bytes  unknown-emoji.csv
next/: analyzer.ts  index.ts  job.ts  logger.ts  schema.d.ts  utils.ts
preprocessing/: message-groups.ts  physics-lab.ts
scripts/: export-py.bat  run.bat  run.sh  setup-env.ps1  setup.bat  (+6 more)
(+37067 files in other folders)
