[project]
name = "LLM-Qualitative-Analysis"
version = "0.0.0"
description = "Accompanying code for the paper 'Generating and Evaluating Inductive Qualitative Coding Results through Human-AI Collaboration'"
authors = [
    { name = "John Chen", email = "civitas@u.northwestern.edu" },
    { name = "Frank Zhang", email = "fzhang@u.northwestern.edu" }
]
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "umap-learn>=0.5.6",
]
requires-python = "==3.12.*"
readme = "README.md"

[project.optional-dependencies]
hdbscan = ["hdbscan>=0.8.39", "seaborn>=0.13.2"]
bertopic = ["python-dotenv>=1.0.1", "bertopic>=0.16.4", "hdbscan>=0.8.39"]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["black>=24.10.0", "isort>=5.13.2", "mypy>=1.13.0", "pylint>=3.3.1"]

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = true

[[tool.pdm.autoexport]]
filename = "requirements.hdbscan.txt"
groups = ["hdbscan"]
without-hashes = true

[[tool.pdm.autoexport]]
filename = "requirements.bertopic.txt"
groups = ["bertopic"]
without-hashes = true
