[project]
name = "LLM-Qualitative-Analysis"
version = "0.0.0"
description = "Accompanying code for the paper 'Generating and Evaluating Inductive Qualitative Coding Results through Human-AI Collaboration'"
authors = [
    { name = "John Chen", email = "civitas@u.northwestern.edu" },
    { name = "Frank Zhang", email = "fzhang@u.northwestern.edu" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "umap-learn>=0.5.7",
]

[dependency-groups]
bertopic = [
    "bertopic>=0.17.0",
    "python-dotenv>=1.1.0",
]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pylint>=3.3.6",
]
hdbscan = [
    "hdbscan>=0.8.40",
    "seaborn>=0.13.2",
]
